--- a/jenkins-slave/Dockerfile
+++ b/jenkins-slave/Dockerfile
@@ -3,7 +3,7 @@ FROM dluc/ubuntu-java-sshd
 RUN apt-get update && \
     adduser --quiet jenkins && \
     echo "jenkins:jenkins" | chpasswd  && \
-    echo "root:password" | chpasswd  && \
+    echo "root:raviteyal22" | chpasswd  && \
     apt-get install -y \ 
 	git && \
     curl -fsSLO https://get.docker.com/builds/Linux/x86_64/docker-17.05.0-ce.tgz && \
